--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
-</body>
-
+    <section class="section1-bg">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="font-color">Rishad Hussein Khan</span> World...</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora accusantium consequuntur commodi blanditiis hic atque dolorum, ullam possimus aliquam voluptatem minus provident odit, beatae sunt obcaecati temporibus deleniti in numquam ipsamillum exercitationem
+                sint. Velit facilis cum similique unde sint!
+            </p>
+            <a class="link-btn" href="https://www.linkedin.com/in/rhkhan18/" target="_blank" rel="noopener noreferrer">Hire me</a
+        >
+      </div>
+      <div class="half-width">
+        <img src="/images/my-bg.png" alt="" srcset="" />
+      </div>
+    </section>
+  </body>
 </html>
