--- a/index.html
+++ b/index.html
@@ -29,5 +29,24 @@
         <img src="/images/my-bg.png" alt="" srcset="" />
       </div>
     </section>
+    <section class="section2-bg">
+      <div class="half-width">
+        <img src="/images/my-bg2.png" alt="" srcset="" />
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a Web Developer</h3>
+        <p class="section2-p">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora
+          accusantium consequuntur commodi blanditiis hic atque dolorum, ullam
+          possimus aliquam voluptatem minus provident odit, beatae sunt
+          obcaecati temporibus deleniti in numquam ipsamillum exercitationem
+          sint. Velit facilis cum similique unde sint!
+        </p>
+        <a class="link-btn" href="#" target="_blank" rel="noopener noreferrer"
+          >Download Resume</a
+        >
+      </div>
+    </section>
   </body>
 </html>
