section-2 and footer done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="section1-bg">
+    <section class="section1-bg flex-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="font-color">Rishad Hussein Khan</span> World...</h1>
@@ -29,7 +29,7 @@
         <img src="/images/my-bg.png" alt="" srcset="" />
       </div>
     </section>
-    <section class="section2-bg">
+    <section class="section2-bg flex-container">
       <div class="half-width">
         <img src="/images/my-bg2.png" alt="" srcset="" />
       </div>
@@ -48,5 +48,35 @@
         >
       </div>
     </section>
+    <section class="section3-bg">
+      <h1>Experiences</h1>
+      <div class="flex-container">
+        <div id="fs-dev" class="section3-item">
+          <h1>Full Stack Developer</h1>
+          <h3 class="font-color">2022 Present | Pro Level Developer</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
+            adipisci molestiae quasi ab nobis aspernatur quidem rerum earum
+            incidunt! Voluptates quidem ipsam ullam quos voluptatibus nostrum
+            dicta, voluptas tempora laudantium! Sequi expedita quaerat nesciunt
+            quas vel tenetur a. Possimus, commodi?
+          </p>
+        </div>
+        <div id="baby-dev" class="section3-item">
+          <h1>Baby Web Developer</h1>
+          <h3 class="font-color">2022-2024 Present | Hero Learner Developer</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
+            adipisci molestiae quasi ab nobis aspernatur quidem rerum earum
+            incidunt! Voluptates quidem ipsam ullam quos voluptatibus nostrum
+            dicta, voluptas tempora laudantium! Sequi expedita quaerat nesciunt
+            quas vel tenetur a. Possimus, commodi?
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>Rishad Hussein Khan 2022 @ Programming Hero Initiative</p>
+    </footer>
   </body>
 </html>
