--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         >
       </div>
       <div class="half-width">
-        <img src="/images/my-bg.png" alt="" />
+        <img src="images/my-img1.png" alt="" />
       </div>
     </section>
     <section class="section2-bg flex-container">
       <div class="half-width">
-        <img src="/images/my-bg2.png" alt="" />
+        <img src="images/my-img2.png" alt="" />
       </div>
       <div class="half-width">
         <h1>Dream Big</h1>
